<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:icon="@drawable/ic_baseline_sort_24">
    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="3"
        android:title="@string/menu_item_favorite"
        app:showAsAction="always"
        android:icon = "@drawable/ic_baseline_favorite_24"/>
    <item
        android:id="@+id/action_sort_by_pop"
        android:orderInCategory="2"
        android:title="@string/menu_item_sort_by_pop"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_rate"
        android:orderInCategory="3"
        android:title="@string/menu_item_sort_by_rate"
        app:showAsAction="never"/>
</menu>