<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="@dimen/detail_view_poster_width"
            android:layout_height="@dimen/detail_view_poster_height"
            android:layout_marginTop="@dimen/boarder_margin_top_down"
            android:contentDescription="@string/detail_poster_content_desc"
            app:layout_constraintEnd_toStartOf="@+id/horizontal_guideline_center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_baseline_image_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50"/>

        <TextView
            android:id="@+id/tv_detail_title"
            style="@style/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/boarder_margin_top_down"
            android:maxWidth="@dimen/detail_view_max_width_title"
            android:maxHeight="@dimen/detail_view_max_height_title"
            android:paddingStart="@dimen/boarder_padding_sides"
            android:paddingEnd="@dimen/boarder_padding_sides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/horizontal_guideline_center"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/tv_label_vote_avg"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/detail_view_margin_info_section"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title"
            android:text="@string/label_vote_avg" />

        <TextView
            android:id="@+id/tv_detail_vote_avg"
            style="@style/detail_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_vote_avg"
            app:layout_constraintStart_toStartOf="@+id/tv_label_vote_avg"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_vote_avg"
            tools:text="@string/sample_vote_avg"/>

        <TextView
            android:id="@+id/tv_label_vote_from"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/detail_view_margin_info_section"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_vote_avg"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_vote_avg"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_vote_avg"
            android:text="@string/label_vote_from" />

        <TextView
            android:id="@+id/tv_detail_vote_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_vote_from"
            app:layout_constraintStart_toStartOf="@+id/tv_label_vote_from"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_vote_from"
            tools:text="@string/sample_vote_from" />

        <TextView
            android:id="@+id/tv_label_release_date"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/detail_view_margin_info_section"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_vote_from"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_vote_from"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_vote_from"
            android:text="@string/label_release_date" />

        <TextView
            android:id="@+id/tv_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            app:layout_constraintEnd_toEndOf="@+id/tv_label_release_date"
            app:layout_constraintStart_toStartOf="@+id/tv_label_release_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_release_date"
            tools:text="@string/sample_release_date" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/introduction_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="iv_detail_poster,tv_detail_release_date"/>

        <TextView
            android:id="@+id/tv_label_description"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/boarder_margin_top_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introduction_barrier"
            android:text="@string/label_description" />

        <TextView
            android:id="@+id/tv_detail_overview"
            style="@style/detail_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_description"
            tools:text="@string/sample_overview" />

        <TextView
            android:id="@+id/tv_label_trailer"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/detail_view_margin_section_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_overview"
            android:text="@string/label_trailer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trailer"
            style="@style/detail_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            android:paddingStart="@dimen/boarder_padding_sides"
            android:paddingEnd="@dimen/boarder_padding_sides"
            android:minHeight="@dimen/detail_view_error_msg_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_trailer">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_trailer_on_error"
            style="@style/error_message"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            android:paddingStart="@dimen/boarder_padding_sides"
            android:paddingEnd="@dimen/boarder_padding_sides"
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_view_error_msg_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_trailer"
            android:text="@string/error_msg_no_trailer"/>

        <TextView
            android:id="@+id/tv_label_review"
            style="@style/detail_label"
            android:layout_marginTop="@dimen/detail_view_margin_section_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_trailer"
            android:text="@string/label_review" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_review"
            style="@style/detail_content"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            android:paddingStart="@dimen/boarder_padding_sides"
            android:paddingEnd="@dimen/boarder_padding_sides"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_review">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_review_on_error"
            style="@style/error_message"
            android:layout_marginTop="@dimen/detail_view_margin_info_content"
            android:paddingStart="@dimen/boarder_padding_sides"
            android:paddingEnd="@dimen/boarder_padding_sides"
            android:layout_width="0dp"
            android:layout_height="@dimen/detail_view_error_msg_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_review"
            android:text="@string/error_msg_no_reviews"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>


